[package]
name = "rust_recon"
description = "A simple RCON library with automatic reconnection support"
repository = "https://github.com/0xken101/rust_recon"
authors = [""]
license = "MIT"
edition = "2018"
version = "0.0.0-dev"

[dependencies]
byteorder = "1.4"
tokio = { version = "1.10", features = [
    "io-util",
    "time",
    "macros",
    "net",
    "rt",
] }

[dev-dependencies.tokio]
version = "*"
features = ["rt-multi-thread", "macros"]

[features]
default = ["reconnection"]
reconnection = ["tokio/sync"]
